--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
+  background-color: #e3f1fe;
+  /* overflow-x: hidden; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +18,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@media only screen and (max-width:1024px) {
+
+  .name h5 {
+    font-size: 10px !important;
+    /* font-weight: 100 !important; */
+  }
+
+  .sideMenu {
+    padding-right: 0px !important;
+  }
+
+  .cards {
+    margin-top: 1rem !important;
+  }
+
+  .Heading {
+    margin-top: 3rem !important;
+    font-size: 17px;
+    font-weight: 700 !important;
+  }
+}
+
+@media only screen and (max-width:980px) {}
+
+@media only screen and (max-width:800px) {}
+
+@media only screen and (max-width:640px) {}
+
+@media only screen and (max-width:480px) {}
+
+@media only screen and (max-width:360px) {}
+
+@media only screen and (max-width:320px) {}
